--- a/write-up/report.Rmd
+++ b/write-up/report.Rmd
@@ -382,6 +382,8 @@ cat("  \n\n")
 
 #### Table 3: Kaplan-Meier 10-week risk estimates
 
+Counts and survival estimates are based on values rounded up to the nearest 7, for disclosure control.
+
 ```{r table-km, echo=FALSE, warning=FALSE, message=FALSE}
 
 contrasts_overall %>%
@@ -394,8 +396,8 @@ contrasts_overall %>%
     persontime_1=label_number(1)(persontime_1/7),
     n.event_0, 
     n.event_1,
-    riskCI_0 = paste0(label_number(0.01)(1-surv_0), " (", label_number(0.01)(1-surv.ul_0), "-", label_number(0.01)(1-surv.ll_0), ")"),
-    riskCI_1 = paste0(label_number(0.01)(1-surv_1), " (", label_number(0.01)(1-surv.ul_1), "-", label_number(0.01)(1-surv.ll_1), ")"),
+    riskCI_0 = paste0(label_number(0.01)(risk_0), " (", label_number(0.01)(risk.ll_0), "-", label_number(0.01)(risk.ul_0), ")"),
+    riskCI_1 = paste0(label_number(0.01)(risk_1), " (", label_number(0.01)(risk.ll_1), "-", label_number(0.01)(risk.ul_1), ")"),
     kmrdCI = paste0(label_number(0.01)(kmrd), " (", label_number(0.01)(kmrd.ll), "-", label_number(0.01)(kmrd.ul), ")"),
     kmrrCI = paste0(label_number(0.01)(kmrr), " (", label_number(0.01)(kmrr.ll), "-", label_number(0.01)(kmrr.ul), ")"),
     irrCI =  paste0(label_number(0.01)(irr), " (", label_number(0.01)(irr.ll), "-", label_number(0.01)(irr.ul), ")"),
@@ -424,8 +426,8 @@ contrasts_overall %>%
     n.event_0 = "Events",
     n.event_1 = "Events",
     
-    riskCI_0 = "Risk (95% CI)",
-    riskCI_1 = "Risk (95% CI)",
+    riskCI_0 = "10-week Risk (95% CI)",
+    riskCI_1 = "10-week Risk (95% CI)",
     
     kmrdCI = "Risk difference (95% CI)",
     kmrrCI = "Risk ratio (95% CI)",
@@ -442,7 +444,7 @@ contrasts_overall %>%
   )  %>%
    tab_spanner(
     label = "Comparison",
-    columns = c("kmrrCI", "irrCI")
+    columns = ends_with("CI")
   ) %>%
   cols_align(
     align = c("right"),
@@ -472,6 +474,8 @@ cat("  \n\n")
 
 #### Figure 3: Kaplan-Meier cumulative incidence estimates
 
+Counts and survival estimates are based on values rounded up to the nearest 7, for disclosure control.
+
 ```{r, figure-km, echo=FALSE, message=FALSE, warning=FALSE, out.width='90%', out.height='50%', results='asis', out.extra=''}
 plot_km <- km_estimates %>%
   filter(
@@ -491,7 +495,7 @@ plot_km <- km_estimates %>%
   labs(
     x="Days",
     y=NULL,
-    title="Cumulative incidence",
+    title="Risk",
     colour=NULL
   )+
   theme_minimal(base_size = 9)+
@@ -509,7 +513,7 @@ plot_km <- km_estimates %>%
       panel.grid.minor.y = element_blank(),
       strip.background = element_blank(),
       strip.placement="outside",
-      strip.text.y = element_text(angle=0),
+      strip.text.x = element_text(angle=0),
 
 
       panel.spacing = unit(0.8, "lines"),
@@ -518,70 +522,26 @@ plot_km <- km_estimates %>%
     NULL
 
 
-# 
-# plot_kmrd <- contrasts_daily %>%
-#   filter(
-#     subgroup=="all",
-#     outcome %in% outcomes
-#   ) %>% 
-#   ggplot(aes(group=subgroup_level_descr, colour=subgroup_level_descr, fill=subgroup_level_descr)) +
-#   geom_step(aes(x=period_start, y=kmrd))+
-#   geom_rect(aes(xmin=period_start, xmax=period_end, ymin=kmrd.ll, ymax=kmrd.ul), alpha=0.1, colour="transparent")+
-#   geom_hline(aes(yintercept=0), colour="black")+
-#   facet_grid(rows=vars(outcome_descr), scales="free_y")+
-#   scale_color_brewer(type="qual", palette="Set1", na.value="grey") +
-#   scale_fill_brewer(type="qual", palette="Set1", guide="none", na.value="grey") +
-#   scale_x_continuous(breaks = seq(0,600,14), expand = expansion(mult=c(0,0.01)))+
-#   scale_y_continuous(expand = expansion(mult=c(0,0.01)))+
-#   coord_cartesian(xlim=c(0, NA))+
-#   labs(
-#     x="Days",
-#     y=NULL,
-#     title="Cumulative risk difference",
-#     colour=NULL
-#   )+
-#   theme_minimal(base_size = 9)+
-#     theme(
-#       legend.position="none",
-#       legend.direction = "vertical",
-#       axis.text.x.top=element_text(hjust=0),
-# 
-#       panel.border = element_blank(),
-#       axis.line.y = element_line(colour = "black"),
-#       axis.line.x.top = element_line(colour = "black"),
-# 
-#       panel.grid.minor.x = element_blank(),
-#       panel.grid.minor.y = element_blank(),
-#       strip.background = element_blank(),
-#       strip.text = element_blank(),
-# 
-# 
-#       panel.spacing = unit(0.8, "lines"),
-# 
-#     )+
-#     NULL
-# 
-# 
 
-plot_kmrr <- contrasts_daily %>%
+plot_kmrd <- contrasts_daily %>%
   filter(
     subgroup=="all",
     outcome %in% outcomes
   ) %>%
   ggplot(aes(group=subgroup_level_descr, colour=subgroup_level_descr, fill=subgroup_level_descr)) +
-  geom_step(aes(x=period_start, y=kmrr))+
-  geom_rect(aes(xmin=period_start, xmax=period_end, ymin=kmrr.ll, ymax=kmrr.ul), alpha=0.1, colour="transparent")+
-  geom_hline(aes(yintercept=1), colour="black")+
+  geom_step(aes(x=period_start, y=kmrd))+
+  geom_rect(aes(xmin=period_start, xmax=period_end, ymin=kmrd.ll, ymax=kmrd.ul), alpha=0.1, colour="transparent")+
+  geom_hline(aes(yintercept=0), colour="black")+
   facet_grid(rows=vars(outcome_descr), scales="free_y")+
   scale_color_brewer(type="qual", palette="Set1", na.value="grey") +
   scale_fill_brewer(type="qual", palette="Set1", guide="none", na.value="grey") +
   scale_x_continuous(breaks = seq(0,600,14), expand = expansion(mult=c(0,0.01)))+
-  scale_y_log10(expand = expansion(mult=c(0,0.01)))+
+  scale_y_continuous(expand = expansion(mult=c(0,0.01)))+
   coord_cartesian(xlim=c(0, NA))+
   labs(
     x="Days",
     y=NULL,
-    title="Cumulative risk ratio",
+    title="Risk difference",
     colour=NULL
   )+
   theme_minimal(base_size = 9)+
@@ -606,18 +566,107 @@ plot_kmrr <- contrasts_daily %>%
     NULL
 
 
-  plot_combined <- patchwork::wrap_plots(
-    plot_km, 
-    #plot_kmrd, 
-    plot_kmrr, 
-    ncol=3
-  )
-  ggsave(
-    filename="km.png",
-    path=output_dir_rmd,
-    plot=plot_combined,
-  )
-  
+
+plot_kmrr <- contrasts_daily %>%
+  filter(
+    subgroup=="all",
+    outcome %in% outcomes
+  ) %>%
+  ggplot(aes(group=subgroup_level_descr, colour=subgroup_level_descr, fill=subgroup_level_descr)) +
+  geom_step(aes(x=period_start, y=kmrr))+
+  geom_rect(aes(xmin=period_start, xmax=period_end, ymin=kmrr.ll, ymax=kmrr.ul), alpha=0.1, colour="transparent")+
+  geom_hline(aes(yintercept=1), colour="black")+
+  facet_grid(rows=vars(outcome_descr), scales="free_y")+
+  scale_color_brewer(type="qual", palette="Set1", na.value="grey") +
+  scale_fill_brewer(type="qual", palette="Set1", guide="none", na.value="grey") +
+  scale_x_continuous(breaks = seq(0,600,14), expand = expansion(mult=c(0,0.01)))+
+  scale_y_log10(expand = expansion(mult=c(0,0.01)))+
+  coord_cartesian(xlim=c(0, NA))+
+  labs(
+    x="Days",
+    y=NULL,
+    title="Risk ratio",
+    colour=NULL
+  )+
+  theme_minimal(base_size = 9)+
+    theme(
+      legend.position="none",
+      legend.direction = "vertical",
+      axis.text.x.top=element_text(hjust=0),
+
+      panel.border = element_blank(),
+      axis.line.y = element_line(colour = "black"),
+      axis.line.x.top = element_line(colour = "black"),
+
+      panel.grid.minor.x = element_blank(),
+      panel.grid.minor.y = element_blank(),
+      strip.background = element_blank(),
+      strip.text = element_blank(),
+
+
+      panel.spacing = unit(0.8, "lines"),
+
+    )+
+    NULL
+
+
+plot_irr <- contrasts_daily %>%
+  # equivalent to the hazard
+  filter(
+    subgroup=="all",
+    outcome %in% outcomes
+  ) %>%
+  ggplot(aes(group=subgroup_level_descr, colour=subgroup_level_descr, fill=subgroup_level_descr)) +
+  geom_step(aes(x=period_start, y=irr))+
+  geom_rect(aes(xmin=period_start, xmax=period_end, ymin=irr.ll, ymax=irr.ul), alpha=0.1, colour="transparent")+
+  geom_hline(aes(yintercept=0), colour="black")+
+  facet_grid(rows=vars(outcome_descr), scales="free_y")+
+  scale_color_brewer(type="qual", palette="Set1", na.value="grey") +
+  scale_fill_brewer(type="qual", palette="Set1", guide="none", na.value="grey") +
+  scale_x_continuous(breaks = seq(0,600,14), expand = expansion(mult=c(0,0.01)))+
+  scale_y_log10(expand = expansion(mult=c(0,0.01)))+
+  coord_cartesian(xlim=c(0, NA))+
+  labs(
+    x="Days",
+    y=NULL,
+    title="Hazard ratio",
+    colour=NULL
+  )+
+  theme_minimal(base_size = 9)+
+  theme(
+    legend.position="none",
+    legend.direction = "vertical",
+    axis.text.x.top=element_text(hjust=0),
+    
+    panel.border = element_blank(),
+    axis.line.y = element_line(colour = "black"),
+    axis.line.x.top = element_line(colour = "black"),
+    
+    panel.grid.minor.x = element_blank(),
+    panel.grid.minor.y = element_blank(),
+    strip.background = element_blank(),
+    strip.text = element_blank(),
+    
+    
+    panel.spacing = unit(0.8, "lines"),
+    
+  )+
+  NULL
+
+plot_combined <- patchwork::wrap_plots(
+  plot_km, 
+  plot_kmrd, 
+  plot_kmrr, 
+  #plot_irr,
+  ncol=4
+)
+
+ggsave(
+  filename="km.png",
+  path=output_dir_rmd,
+  plot=plot_combined,
+)
+
 plot_combined
 cat("  \n\n")
 
