--- a/write-up/report.Rmd
+++ b/write-up/report.Rmd
@@ -396,8 +396,8 @@ contrasts_overall %>%
     persontime_1=label_number(1)(persontime_1/7),
     n.event_0, 
     n.event_1,
-    riskCI_0 = paste0(label_number(0.01)(risk_0), " (", label_number(0.01)(risk.ll_0), "-", label_number(0.01)(risk.ul_0), ")"),
-    riskCI_1 = paste0(label_number(0.01)(risk_1), " (", label_number(0.01)(risk.ll_1), "-", label_number(0.01)(risk.ul_1), ")"),
+    riskCI_0 = paste0(label_number(0.01)(1-surv_0), " (", label_number(0.01)(1-surv.ul_0), "-", label_number(0.01)(1-surv.ll_0), ")"),
+    riskCI_1 = paste0(label_number(0.01)(1-surv_1), " (", label_number(0.01)(1-surv.ul_1), "-", label_number(0.01)(1-surv.ll_1), ")"),
     kmrdCI = paste0(label_number(0.01)(kmrd), " (", label_number(0.01)(kmrd.ll), "-", label_number(0.01)(kmrd.ul), ")"),
     kmrrCI = paste0(label_number(0.01)(kmrr), " (", label_number(0.01)(kmrr.ll), "-", label_number(0.01)(kmrr.ul), ")"),
     irrCI =  paste0(label_number(0.01)(irr), " (", label_number(0.01)(irr.ll), "-", label_number(0.01)(irr.ul), ")"),
